--- a/roadmap/README
+++ b/roadmap/README
@@ -2299,15 +2299,17 @@ CONFIGURATION
          <<Comment:>> the hardcoded default includes the usual linux system
                       pixmap directories used for storing application icons.
 
-    [General.Progress Bar] Enable/disable a progress bar during refresh.
+    [General.Progress Bar Delay] Delay until progress bar during refresh.
 
-         <<Format:>> boolean
+         <<Format:>> integer (milliseconds)
 
-         <<Default:>> yes
+         <<Default:>> 300
 
          <<Comment:>> when displaying maps that cover a large area, or on
                       a slow computer, it may be helpful to have an on-screen
-                      indication of how long the refresh will take.
+                      indication of how long the refresh will take.  The
+		      value is the delay until the progress bar appears.  Use
+		      '0' to disable the progress bar.
 
     [General.Toolbar] Show (yes) or hide (no) the roadmap toolbar.
 
